--- a/Portfolio/Blueprints/portfolio/templates/profile.html
+++ b/Portfolio/Blueprints/portfolio/templates/profile.html
@@ -42,19 +42,19 @@
                             <div class="social-media-accounts">
                                 
                                 <div class="icons">
-                                    <img src="{{ url_for('static', filename='images/fb-icon.png') }}" alt="fb-icon" width="25px"><a href="https://www.facebook.com/edrhovicesmas">Facebook</a>
+                                    <img src="{{ url_for('static', filename='images/fb-icon.png') }}" alt="fb-icon" width="25px"><a href="https://www.facebook.com/edrhovicesmas" target="_blank">Facebook</a>
                                 </div>
 
                                 <div class="icons">
-                                    <img src="{{ url_for('static', filename='images/github.png') }}" alt="fb-icon" width="25px"><a href="https://github.com/edrhovic">GitHub</a>
+                                    <img src="{{ url_for('static', filename='images/github.png') }}" alt="fb-icon" width="25px"><a href="https://github.com/edrhovic" target="_blank">GitHub</a>
                                 </div>
 
                                 <div class="icons">
-                                    <img src="{{ url_for('static', filename='images/ig-icon.png') }}" alt="fb-icon" width="25px"><a href="https://www.instagram.com/edlvswi/?igsh=MW12MTk0dndidnhwMA%3D%3D">Instagram</a>
+                                    <img src="{{ url_for('static', filename='images/ig-icon.png') }}" alt="fb-icon" width="25px"><a href="https://www.instagram.com/edlvswi/?igsh=MW12MTk0dndidnhwMA%3D%3D" target="_blank">Instagram</a>
                                 </div>
 
                                 <div class="icons">
-                                    <img src="{{ url_for('static', filename='images/linkedin-icon.png') }}" alt="fb-icon" width="25px"><a href="https://www.linkedin.com/in/ed-rhovic-esmas-3393b8333/">LinkedIn</a>
+                                    <img src="{{ url_for('static', filename='images/linkedin-icon.png') }}" alt="fb-icon" width="25px"><a href="https://www.linkedin.com/in/ed-rhovic-esmas-3393b8333/" target="_blank">LinkedIn</a>
                                 </div>
                             </div>
                         </div>
