adjustment on hashing again

--- a/Portfolio/Blueprints/portfolio/templates/profile.html
+++ b/Portfolio/Blueprints/portfolio/templates/profile.html
@@ -14,18 +14,19 @@
 </head>
 <body>
     <div class="container1 container mt-5 fadeIn">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <div class="flash-messages mt-4">
-                    {% for category, message in messages %}
-                        <div class="alert alert-{{ 'danger' if category == 'error' else 'success' }} alert-dismissible fade show" role="alert">
-                            <strong>{{ category | capitalize }}: </strong>{{ message }}
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        {% endwith %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    <div class="flash-messages mt-4">
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ 'danger' if category == 'error' else 'info' if category == 'info' else 'success' }} alert-dismissible fade show" role="alert">
+                                <strong>{{ category | capitalize }}: </strong>{{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            {% endwith %}
+
             <div class="mb-4 containerz col row-cols-1 row-cols-md-2">
                 <div class="col-md-4 col-12 text-center column1 animate__animated animate__slideInLeft">
                     <div class="column1-content">
