--- a/Portfolio/Blueprints/portfolio/templates/dashboard.html
+++ b/Portfolio/Blueprints/portfolio/templates/dashboard.html
@@ -18,7 +18,7 @@
                 <img src="{{url_for('static', filename='images/me.png')}}" class="profile-image" alt="Profile Picture">
             </div>
             <div class="greetings">
-                <h1 class="welcome-text">Hi, I'm <span class='fname', style="text-shadow: 4px 4px 20px rgb(0, 0, 0);">{{ session['firstname'] }}</span></h1>
+                <h1 class="welcome-text">Hi, I'm <span class='fname', style="text-shadow: 1px 4px 0px rgba(0,0,0,0.6);">{{ session['firstname'] }}</span></h1>
                 <h2 class="profession">Aspiring <span></span></h2>
                 <p>I'm an aspiring full-stack web developer eager to learn and gain experience in building websites and applications. I'm passionate about exploring both design and backend development to bring ideas to life.</p>
             </div>
