--- a/Portfolio/static/css/profiles.css
+++ b/Portfolio/static/css/profiles.css
@@ -27,6 +27,7 @@ body {
     box-shadow: 0px 1px 34px 0px rgba(0, 0, 0, 0.75);
     width: 100%;
     max-width: 150px;
+    border: 5px solid #aa92c7;
 }
 
 .profile-details {
