--- a/Portfolio/static/css/base.css
+++ b/Portfolio/static/css/base.css
@@ -33,6 +33,7 @@ body {
     padding-top: 3.125rem;
     box-shadow: 0 0 1.25rem 0.1875rem rgba(53, 41, 68, 0.5);
     transition: 0.5s ease-in-out; 
+    border-right: #592c5f 1px solid;
     z-index: 10000;
 }
 
@@ -47,11 +48,6 @@ body {
     position: relative;
     transition: 0.5s ease-in-out;
     animation: colorChange 3s infinite alternate;
-}
-
-#logo:hover {
-    color: #683b6e;
-    text-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.7);
 }
 
 @keyframes colorChange {
@@ -106,6 +102,12 @@ ul li a:hover {
     top: 0.1rem;
     left: 0.1rem;
     z-index: 1000;
+    transition: 0.3s ease-in-out;
+}
+
+#hamburger:hover {
+    color: #683b6e;
+    text-shadow: 0px -1px 9px rgba(0,0,0,1);
 }
 
 .nav-bar.open {
@@ -118,6 +120,7 @@ ul li a:hover {
 }
 
 .menu.show {
+    padding: 0;
     display: flex;
 }
 
