--- a/Portfolio/Blueprints/crud/templates/users.html
+++ b/Portfolio/Blueprints/crud/templates/users.html
@@ -69,7 +69,7 @@
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title">Update Profile</h5>
+                                    <h5 class="modal-title">Update User's Info</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <form method="POST" action="{{ url_for('crud.update', id=data[0]) }}">
@@ -117,7 +117,7 @@
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title">Delete Profile</h5>
+                                    <h5 class="modal-title">Delete User</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <form method="POST" action="{{ url_for('crud.delete', id=data[0]) }}">
@@ -172,7 +172,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" name="email" required>
+                                <input type="email" class="form-control" name="email">
                             </div>
                         </div>
                         <div class="modal-footer">
